k8s/07-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  # clusterIP: None cria um Service headless, necessário para StatefulSet.
  # Permite resolução DNS direta ao pod: mysql-0.mysql-svc
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
